CS232 - Programming Languages/Lab1_2/task7/Terminal Saved Output
Last login: Tue Feb  2 12:09:13 on ttys000
SIE-1222-19:~ robert.florence883$ cd Desktop
SIE-1222-19:Desktop robert.florence883$ cd CS232/
SIE-1222-19:CS232 robert.florence883$ cd Lab1/
SIE-1222-19:Lab1 robert.florence883$ cd task7
SIE-1222-19:task7 robert.florence883$ gcc ptr-arg-2.c -o ptr
ptr-arg-2.c:5:1: warning: type specifier missing, defaults to
      'int' [-Wimplicit-int]
main() {
^
1 warning generated.
SIE-1222-19:task7 robert.florence883$ gcc ptr-arg-2.c -o ptr
SIE-1222-19:task7 robert.florence883$ ./ptr
num1 = 10 and num2 = 5
SIE-1222-19:task7 robert.florence883$ gcc ptr-arg-2.c -o ptr
ptr-arg-2.c:9:10: warning: incompatible pointer types passing
      'char (*)[50]' to parameter of type 'int *'
      [-Wincompatible-pointer-types]
    swap(&str1, &str2);
         ^~~~~
ptr-arg-2.c:3:16: note: passing argument to parameter here
void swap(int *, int *);
               ^
ptr-arg-2.c:9:17: warning: incompatible pointer types passing
      'char (*)[50]' to parameter of type 'int *'
      [-Wincompatible-pointer-types]
    swap(&str1, &str2);
                ^~~~~
ptr-arg-2.c:3:23: note: passing argument to parameter here
void swap(int *, int *);
                      ^
2 warnings generated.
SIE-1222-19:task7 robert.florence883$ gcc ptr-arg-2.c -o ptr
ptr-arg-2.c:9:10: warning: incompatible pointer types passing
      'char (*)[50]' to parameter of type 'int *'
      [-Wincompatible-pointer-types]
    swap(&str1, &str2);
         ^~~~~
ptr-arg-2.c:3:16: note: passing argument to parameter here
void swap(int *, int *);
               ^
ptr-arg-2.c:9:17: warning: incompatible pointer types passing
      'char (*)[50]' to parameter of type 'int *'
      [-Wincompatible-pointer-types]
    swap(&str1, &str2);
                ^~~~~
ptr-arg-2.c:3:23: note: passing argument to parameter here
void swap(int *, int *);
                      ^
ptr-arg-2.c:13:6: error: conflicting types for 'swap'
void swap(char *n1, char *n2) {
     ^
ptr-arg-2.c:3:6: note: previous declaration is here
void swap(int *, int *);
     ^
2 warnings and 1 error generated.
SIE-1222-19:task7 robert.florence883$ gcc ptr-arg-2.c -o ptr
ptr-arg-2.c:9:10: warning: incompatible pointer types passing
      'char (*)[50]' to parameter of type 'int *'
      [-Wincompatible-pointer-types]
    swap(&str1, &str2);
         ^~~~~
ptr-arg-2.c:3:16: note: passing argument to parameter here
void swap(int *, int *);
               ^
ptr-arg-2.c:9:17: warning: incompatible pointer types passing
      'char (*)[50]' to parameter of type 'int *'
      [-Wincompatible-pointer-types]
    swap(&str1, &str2);
                ^~~~~
ptr-arg-2.c:3:23: note: passing argument to parameter here
void swap(int *, int *);
                      ^
ptr-arg-2.c:13:6: error: conflicting types for 'swap'
void swap(char *n1, char *n2) {
     ^
ptr-arg-2.c:3:6: note: previous declaration is here
void swap(int *, int *);
     ^
ptr-arg-2.c:16:8: error: array type 'char [50]' is not
      assignable
  temp = *n1;
  ~~~~ ^
ptr-arg-2.c:18:7: warning: incompatible pointer to integer
      conversion assigning to 'char' from 'char [50]'
      [-Wint-conversion]
  *n2 = temp;
      ^ ~~~~
3 warnings and 2 errors generated.
SIE-1222-19:task7 robert.florence883$ gcc ptr-arg-2.c -o ptr
ptr-arg-2.c:9:10: warning: incompatible pointer types passing
      'char (*)[50]' to parameter of type 'int **'
      [-Wincompatible-pointer-types]
    swap(&str1, &str2);
         ^~~~~
ptr-arg-2.c:3:17: note: passing argument to parameter here
void swap(int **, int **);
                ^
ptr-arg-2.c:9:17: warning: incompatible pointer types passing
      'char (*)[50]' to parameter of type 'int **'
      [-Wincompatible-pointer-types]
    swap(&str1, &str2);
                ^~~~~
ptr-arg-2.c:3:25: note: passing argument to parameter here
void swap(int **, int **);
                        ^
ptr-arg-2.c:13:6: error: conflicting types for 'swap'
void swap(char **n1, char **n2) {
     ^
ptr-arg-2.c:3:6: note: previous declaration is here
void swap(int **, int **);
     ^
ptr-arg-2.c:16:8: error: array type 'char [50]' is not
      assignable
  temp = *n1;
  ~~~~ ^
2 warnings and 2 errors generated.
SIE-1222-19:task7 robert.florence883$ gcc ptr-arg-2.c -o ptr
ptr-arg-2.c:9:10: warning: incompatible pointer types passing
      'char (*)[50]' to parameter of type 'char **'
      [-Wincompatible-pointer-types]
    swap(&str1, &str2);
         ^~~~~
ptr-arg-2.c:3:18: note: passing argument to parameter here
void swap(char **, char**);
                 ^
ptr-arg-2.c:9:17: warning: incompatible pointer types passing
      'char (*)[50]' to parameter of type 'char **'
      [-Wincompatible-pointer-types]
    swap(&str1, &str2);
                ^~~~~
ptr-arg-2.c:3:26: note: passing argument to parameter here
void swap(char **, char**);
                         ^
ptr-arg-2.c:16:8: error: array type 'char [50]' is not
      assignable
  temp = *n1;
  ~~~~ ^
2 warnings and 1 error generated.
SIE-1222-19:task7 robert.florence883$ gcc ptr-arg-2.c -o ptr
ptr-arg-2.c:16:8: error: array type 'char [50]' is not
      assignable
  temp = *n1;
  ~~~~ ^
1 error generated.
SIE-1222-19:task7 robert.florence883$ gcc ptr-arg-2.c -o ptr
SIE-1222-19:task7 robert.florence883$ ./ptr
str1 = world and str2 = hello
SIE-1222-19:task7 robert.florence883$ gcc ptr-arg-2.c -o ptr
SIE-1222-19:task7 robert.florence883$ ./ptr
BEFORE SWAP: str1 = hello and str2 = world
AFTER SWAP: str1 = world and str2 = hello
SIE-1222-19:task7 robert.florence883$ ./ptr > programoutput.txt
SIE-1222-19:task7 robert.florence883$ 
